syntax "proto2"

package server.proto

message MsgPing {
    optional uint32 index = 1;
}

message MsgPong {
    optional string index = 1;
}

message MsgRobot {
    optional string test = 1;
}

message MsgTestTcpRequest {
    optional uint32 count = 1;
}

message MsgTestTcpReply {
    optional string test = 1;
}
